# brooks-cli

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: main.yaml
snapshots/: brooks_cli__test__cli_tests__binary_test.snap  brooks_cli__test__cli_tests__help_test.snap
src/: main.rs  proxy.rs  serve.rs  test.rs
src/snapshots/: brooks_cli__test__cli_tests__analyze_test_errors-2.snap  brooks_cli__test__cli_tests__analyze_test_errors-3.snap  brooks_cli__test__cli_tests__analyze_test_errors-4.snap  brooks_cli__test__cli_tests__analyze_test_errors.snap  brooks_cli__test__cli_tests__bad_path_test.snap  brooks_cli__test__cli_tests__compile_test_errors-2.snap  brooks_cli__test__cli_tests__compile_test_errors-3.snap  brooks_cli__test__cli_tests__compile_test_errors.snap  brooks_cli__test__cli_tests__help_test.snap  brooks_cli__test__cli_tests__interp_test_boolean_builtin.snap  brooks_cli__test__cli_tests__interp_test_path_element.snap  brooks_cli__test__cli_tests__interp_test_path_element_name.snap  brooks_cli__test__cli_tests__interp_test_reqs.snap  brooks_cli__test__cli_tests__interp_test_reqs_name.snap  brooks_cli__test__cli_tests__simple_test.snap
tests/: analysis_error.mel  analysis_error2.mel  analysis_error3.mel  analysis_error4.mel  binary.mel  compile_error.mel  compile_error2.mel  function_name.mel  path_element.mel  reqs.mel  simple.mel
tests/proxy/: header_transform.json  response_rewrite.json  response_rewrite_expr.json  simple.curl  synthetic_response.json  uri_rewrite.json  uri_rewrite_expr.json
tests/serve/: boolean.curl  clientip.curl  headers.curl  (+4 more)
